--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,6 +1,30 @@
 {% extends 'base.html' %}
 
 {% block content %}
-Login!
+
+{% if error %}
+{{ error }}
+<br />
+<br />
+{% endif %}
+
+<h1>Login</h1>
+
+<form method="POST" action="{% url 'login' %}">
+{% csrf_token %}
+
+Username:
+<br />
+<input type="text" name="username" required/>
+<br />
+Password:
+<br />
+<input type="password" name="password" />
+<br />
+Confirm Password:
+<br />
+<br />
+<input class ="btn btn-primary" type="submit" value="Login"/>
+</form>
 
 {% endblock %}
