--- a/productHunt/templates/base.html
+++ b/productHunt/templates/base.html
@@ -44,20 +44,29 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav ml-auto">
+                {% if user.is_authenticated %}
+                <a class="nav-item nav-link" href="javascript:{document.getElementById('logout').submit()}">Logout</a>
+                <form id="logout" method="POST" action="{% url 'logout' %}">
+                  {% csrf_token %}
+                  <input type = "hidden" />
+                </form>
                 <a class="nav-item nav-link" href="#">Anime List</a>
                 <a class="nav-item nav-link" href="https://twitter.com/xa333">Twitter</a>
-                <a class="nav-item nav-link" >Sign Up</a>
-                <a class="nav-item nav-link" >Login</a>
+                {% else %}
+                <a class="nav-item nav-link" href="#">Anime List</a>
+                <a class="nav-item nav-link" href="https://twitter.com/xa333">Twitter</a>
+                <a class="nav-item nav-link" href="{% url 'signup' %}">Sign Up</a>
+                <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                {% endif %}
               </div>
             </div>
           </nav>
     </header>
 <div class="container">
-
-
+  {%block content%}
+  {% endblock %}
 </div>
-{%block content%}
-{% endblock %}
+
 <footer class="text-muted">
   <div class="container text-center">
       <p>© Lunar Software Engineering LLC {%now "Y"%}</p>
